# colbak

./: .gitignore  Cargo.toml  README.md  cov.sh  default.nix  generate_tests.sh  test.cpio
.github/workflows/: ci.yml
src/: async_tar.rs  collector.rs  cpio.rs  database.rs  fileext.rs  fileinfo.rs  lib.rs  logging.rs  main.rs  maybemut.rs  packer.rs  path.rs  serde_b64.rs  serialization.rs  sql.rs  stream_hash.rs  strings.rs  types.rs  utils.rs
src/backup/: aws.rs  database.rs  mod.rs
src/cloud/: local_fs.rs  mod.rs  state.rs
src/cpio/: engine.rs  machine.rs  mod.rs  pending.rs  reader.rs  smart_read.rs  state_machine.rs  write_proxy.rs  writer.rs
src/database/: difference.rs  error.rs  index.rs  mod.rs  snapshot.rs
src/tree/: builder.rs  collector.rs  db.rs  json.rs  mod.rs
tests/: big_archive.cpio  cpio.rs  cpio_extract.rs  even_named_file.cpio  odd_named_file.cpio
tests/archive/: even  odd
