cargo-features = ["edition2021"]

[package]
name = "colbak"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/iliakonnov/colbak"
description = "Backup tool for cold storages"
keywords = ["cli"]
categories = ["command-line-utilities"]

[lib]
name = "colbak_lib"
path = "src/lib.rs"

[[bin]]
name = "colbak"
path = "src/main.rs"

[dependencies]
structopt = "0.3.22"
once_cell = "1.8.0"
num_enum = "0.5.4"
snafu = { version = "0.6.10", default-features = false, features = ["std", "unstable-backtraces-impl-std"] }
futures = "0.3.16"
async-trait = "0.1.51"
tokio = { version = "1.10.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec", "compat"] }
bytes = "1.0.1"
pin-project-lite = "0.2.7"
static_assertions = "1.1.0"
time = { version = "0.3.1", default-features = false, features = ["std", "serde", "formatting", "macros"] }
os_str_bytes = "4.0.0"
walkdir = "2.3.2"
fs2 = "0.4.3"
rusqlite = "0.25.3"
either = "1.6.1"
digest = "0.9.0"
sha2 = "0.9.5"
base64 = "0.13.0"
serde = { version = "1.0.129", features = [ "derive", "unstable" ] }
serde_json = "1.0.66"
smallvec = "1.6.1"

[dev-dependencies]
hex-literal = "0.3.3"
