[package]
name = "colbak"
version = "0.1.0"
authors = ["Ilia Konnov <iliakonnov@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/iliakonnov/colbak"
description = "Backup tool for cold storages"
keywords = ["cli"]
categories = ["command-line-utilities"]

[lib]
name = "colbak_lib"
path = "src/lib.rs"

[[bin]]
name = "colbak"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
digest = "0.9.0"
fs2 = "0.4.3"  # Used once for lock_exclusive
futures = "0.3.16"
os_str_bytes = "4.0.0"
pin-project-lite = "0.2.7"
rusqlite = "0.25.3"
serde = { version = "1.0.129", features = [ "derive" ] }
serde_json = "1.0.66"
sha2 = "0.9.5"
smallvec = "1.6.1"  # Used once in packer
snafu = { version = "0.6.10", default-features = false, features = ["std", "unstable-backtraces-impl-std"] }
structopt = "0.3.22"
time = { version = "0.3.1", default-features = false, features = ["std", "serde", "formatting", "macros"] }
tokio = { version = "1.10.1", features = ["rt-multi-thread", "fs", "io-std", "io-util", "macros"] }
walkdir = "2.3.2"

[dev-dependencies]
hex-literal = "0.3.3"
